Fix: align player error

--- a/esportsfantasyfe/src/app/team/selectplayer-modal/selectplayer-modal.component.scss
+++ b/esportsfantasyfe/src/app/team/selectplayer-modal/selectplayer-modal.component.scss
@@ -8,6 +8,10 @@
   }
 }
 
+.remove-player {
+  background-color: rgb(139, 137, 137);
+}
+
 .element-p {
   color: white;
   font-size: 1.5rem;
